navbar half User icon styling done

--- a/src/components/Dashboard.js/Header.module.css
+++ b/src/components/Dashboard.js/Header.module.css
@@ -2,9 +2,9 @@
 .container{
     display: flex;
     justify-content: space-between;
-    height: 60px;
-    background-color: aqua;
+    height: 65px;
     width: 100vw;
+    box-shadow: 0 0 5px gray;
 }
 
 .image{
@@ -18,7 +18,7 @@
     padding: 11px 11px;
     border-radius: 25px;
     background: lightgray;
-    height: 12px;
+    height: 15px;
     margin-top: 1%;
 }
 
@@ -29,12 +29,67 @@
     background: transparent;
 }
 
-.sidePopUp{
+.dropbtn{
+    background-color: rgb(82, 147, 187);
+    color: white;
+    padding: 16px;
+    height: 65px;
+    font-size: 16px;
+    width: 100px;
+    border: none;
+}
+
+.dropdown{
+    position: relative;
+    display: inline-block;
+}
+
+.dropdownContent{
+   display: none;
+   position: absolute;
+   background-color: white;
+   width: 560px;
+   box-shadow: 0 0 5px grey;
+   padding: 20px;
+   z-index: 1;
+}
+
+.dropdownContent p{
+    color: black;
+    display: block;
+    text-decoration: none;
+}
+
+.dropdownContent p:hover{
+    color: red;
+}
+
+.dropdown:hover .dropdownContent{
+    display: block;
+}
+
+.dropdown:hover .dropbtn{
+    background-color: gray;
+}
+
+
+/* .sidePopUp{
     display: flex;
     justify-content: space-between;
+    border-radius: 50%;
+    border: transparent;
 }
 
 .sidePopUp button{
     border: transparent;
-    height: 60px;
+    width: 85px; 
+    background-color: white;
 }
+
+.addUser{
+    height: 65px;
+    padding: 0 30px;
+    box-shadow: 0 0 2px gray;
+    align-items: center;
+}
+*/
