--- a/src/components/Dashboard.js/Header.module.css
+++ b/src/components/Dashboard.js/Header.module.css
@@ -3,7 +3,7 @@
     display: flex;
     justify-content: space-between;
     height: 65px;
-    width: 100vw;
+    width: 100vw !important;
     box-shadow: 0 0 5px gray;
 }
 
@@ -35,7 +35,7 @@
     padding: 16px;
     height: 65px;
     font-size: 16px;
-    width: 100px;
+    width: 78px;
     border: none;
 }
 
@@ -48,9 +48,9 @@
    display: none;
    position: absolute;
    background-color: white;
-   width: 560px;
    box-shadow: 0 0 5px grey;
-   padding: 20px;
+   min-height: 344px;
+   width: 300px;
    z-index: 1;
 }
 
@@ -58,10 +58,12 @@
     color: black;
     display: block;
     text-decoration: none;
+    margin-left: 5px;
 }
 
 .dropdownContent p:hover{
     color: red;
+    font-size: large;
 }
 
 .dropdown:hover .dropdownContent{
@@ -69,27 +71,94 @@
 }
 
 .dropdown:hover .dropbtn{
-    background-color: gray;
+    background-color: rgb(82, 173, 82);
 }
 
-
-/* .sidePopUp{
-    display: flex;
-    justify-content: space-between;
-    border-radius: 50%;
-    border: transparent;
+.userName{
+    top: 10%;
+    font-size: 15px;
 }
 
-.sidePopUp button{
-    border: transparent;
-    width: 85px; 
-    background-color: white;
+.logout{
+    min-width: 280px;
+    margin-top: 30px;
+    height: 35px;
+    margin-top: 50px;
+    margin-bottom: 50px;
 }
 
-.addUser{
-    height: 65px;
-    padding: 0 30px;
-    box-shadow: 0 0 2px gray;
-    align-items: center;
+.logout:hover{
+    background-color: lightgray;
 }
-*/
+
+.websiteName{
+    font-size: 13px !important;
+    margin-left: 5px;
+    color: gray !important;
+    margin-left: 20px !important;
+}
+
+.websiteName:hover{
+    color: black !important;
+}
+
+@media (max-width: 768px){
+
+    .inputBox{
+        width: 180px;
+    }
+}
+
+@media (max-width: 480px){
+
+    .container{
+        height: 50px;
+    }
+
+    .image{
+        height: 50px;
+    }
+
+    .searchBox{
+        display: none;
+    }
+
+    .dropbtn{
+       width: 60px;
+       font-size: 12px;
+       height: 50px;
+    }
+
+    .userName{
+        font-size: 10px;
+    }
+
+    .userEmail{
+        font-size: 10px;
+    }
+
+    .logout{
+        min-width: 180px;
+        height: 20px;
+        margin-top: 20px;
+        margin-bottom: 20px;
+        font-size: smaller !important;
+    }
+
+    .dropdownContent{
+        width: 200px;
+        min-height: 190px;
+    }
+
+    .websiteName{
+        font-size: 8px !important;
+    }
+
+    .dropdownContent p:hover{
+        font-size: small;
+    }
+
+    .userEmail:hover{
+        font-size: 12px !important;
+    }
+}
