--- a/src/components/Dashboard.js/Header.module.css
+++ b/src/components/Dashboard.js/Header.module.css
@@ -1,10 +1,13 @@
-
 .container{
     display: flex;
     justify-content: space-between;
     height: 65px;
-    width: 100vw !important;
+    width: 100vw;
     box-shadow: 0 0 5px gray;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 99;
 }
 
 .image{
@@ -15,11 +18,17 @@
 .searchBox{
     display: flex;
     border: 1px solid #ccc;
-    padding: 11px 11px;
+    padding: 5px 11px;
     border-radius: 25px;
     background: lightgray;
-    height: 15px;
+    height: 40px;
     margin-top: 1%;
+}
+
+.searchBox img{
+    margin-top: 5px;
+    height: 17px;
+    width: 15px;
 }
 
 .inputBox{
@@ -49,7 +58,7 @@
    position: absolute;
    background-color: white;
    box-shadow: 0 0 5px grey;
-   min-height: 344px;
+   min-height: 244px;
    width: 300px;
    z-index: 1;
 }
@@ -75,7 +84,8 @@
 }
 
 .userName{
-    top: 10%;
+    margin-top: 15px;
+    margin-bottom: 10px;
     font-size: 15px;
 }
 
@@ -83,7 +93,7 @@
     min-width: 280px;
     margin-top: 30px;
     height: 35px;
-    margin-top: 50px;
+    margin-top: 40px;
     margin-bottom: 50px;
 }
 
