--- a/src/components/Dashboard-SideNav/UploadVideo.module.css
+++ b/src/components/Dashboard-SideNav/UploadVideo.module.css
@@ -1,35 +1,33 @@
-.container{
-    display: flex;
-    flex-direction: column;
+.container {
+  display: flex;
+  flex-direction: column;
 }
 
 .uploadArea {
-    margin-top: 75px;
-    margin-right: 15px;
-    margin-left: 100px;
-    margin-bottom: 20px;
-    height: 100vh;
+  margin: 75px 15px 20px 100px;
+  height: 90vh;
+  background-image: url('./../../../src/images/background.jpeg');
 }
 
-.uploadArea input{
-    /* position: absolute; */
-    left: 250px;
-    color: white;
+.uploadArea input {
+  /* position: absolute; */
+  left: 250px;
+  color: white;
 }
 
-.uploadArea h2{
-    transition: (-50%, -50%);
-    color: white;
-    position: absolute;
-    left: 47%;
-    top: 40%;
-    margin-top: 8%;
-    font-size: 30px;
+.uploadArea h2 {
+  transition: (-50%, -50%);
+  color: white;
+  position: absolute;
+  left: 47%;
+  top: 40%;
+  margin-top: 8%;
+  font-size: 30px;
 }
 
-.uploadArea button{
-    transition: (-50%, -50%);
-    position: absolute;
-    left: 60%;
-    padding: 5px 20px;
+.uploadArea button {
+  transition: (-50%, -50%);
+  position: absolute;
+  left: 60%;
+  padding: 5px 20px;
 }
