--- a/src/components/Dashboard.js/MainPage.module.css
+++ b/src/components/Dashboard.js/MainPage.module.css
@@ -4,8 +4,10 @@
   box-sizing: border-box;
 }
 
-.container{
-    /* position: relative; */
+.container {
+  position: relative;
+  /* height: calc(100vh - 65px); */
+  top: 65px;
 }
 
 .mainArea {
