--- a/src/components/Dashboard.js/SideNavigation.module.css
+++ b/src/components/Dashboard.js/SideNavigation.module.css
@@ -1,63 +1,64 @@
-.container{
+.container {
     height: 100vh !important;
     width: 75px;
     background-color: rgb(34, 37, 37);
     position: fixed;
-    margin-top: 70px;
-}
-
-.size{
-    margin-top: 25px;
+    /* margin-top: 70px; */
+  }
+  
+  .size {
+    /* margin-top: 25px; */
     margin-left: 20px;
     margin-bottom: 35px;
-}
-
-.iconUploadNames{
+  }
+  
+  .iconUploadNames {
     font-size: x-small;
     color: white;
-}
-
-.iconAllVideoNames{
+  }
+  
+  .iconAllVideoNames {
     font-size: x-small;
     color: white;
-}
-
-.iconFavVideoNames{
+  }
+  
+  .iconFavVideoNames {
     font-size: x-small;
     color: white;
-}
-
-.uploadVideos{
+  }
+  
+  .uploadVideos {
     color: gray;
     font-size: 25px;
-}
-
-.playVideos{
+    margin-top: 25px;
+  }
+  
+  .playVideos {
     color: gray;
     font-size: 30px;
-}
-
-.favVideos{
+  }
+  
+  .favVideos {
     color: gray;
     font-size: 22px;
     margin-left: 4px;
-}
-
-.container:hover{
+  }
+  
+  .container:hover {
     background-color: black;
-}
-
-.uploadVideos:hover{
+  }
+  
+  .uploadVideos:hover {
     font-size: 30px;
     color: white;
-}
-
-.playVideos:hover{
+  }
+  
+  .playVideos:hover {
     font-size: 40px;
     color: white;
-}
-
-.favVideos:hover{
+  }
+  
+  .favVideos:hover {
     font-size: 30px;
     color: white;
-}
+  }
