playwith reactVideo player & manually put firebase url

--- a/src/components/Dashboard-mainSceenView/MainScreen.module.css
+++ b/src/components/Dashboard-mainSceenView/MainScreen.module.css
@@ -12,11 +12,8 @@
     justify-content: center;
     align-items: center;
     margin-top: 30px;
-    /* height: 200px;
-    width: 273px; */
+    height: 350px;
+    width: 310px;
     color: black;
     font-size: small;
-}
-.item iframe{
-    height: 200px;
 }
