--- a/src/components/Dashboard-SideNav/CheckData.module.css
+++ b/src/components/Dashboard-SideNav/CheckData.module.css
@@ -4,8 +4,10 @@
     flex-wrap: wrap;
     margin-left: 100px;
     margin-top: 40px;
-    margin-bottom: 10px;
-}
+    color: white;
+    box-shadow: 0 0 10px white;
+    padding: 2px 5px; 
+} 
 
 .videoTitle{
     font-size: medium;
