--- a/src/components/Dashboard-mainSceenView/MainScreen.module.css
+++ b/src/components/Dashboard-mainSceenView/MainScreen.module.css
@@ -1,17 +1,61 @@
 .UploadedVideoSlider{
-    margin-top: 70px;
-    margin-bottom: 40px;
+    margin-top: 60px;
+    margin-bottom: 10px;
     margin-left: 100px;
-    width: 90vw !important;
-    background-color: white;     
+    width: 90vw;
+    background-color: white;    
     box-shadow: 0 0 5px gray;
 }
 
- .item{
+.displayHeadingCarousalContent{
     display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 30px;
+    justify-content: space-between;
+}
+
+.seeAllVideos{
+    margin-right: 30px;
+    font-size: large;
+    color: gray;
+}
+
+.seeAllVideos:hover{
     color: black;
+}
+
+.CarouselHeading{
+    display: flex;
+    justify-content: space-between;
+}
+
+.CarouselHeading{
+    font-size: x-large;
+}
+
+.item{
+    display: flex;
+    flex-direction: column;
+    justify-content: center; 
+    margin-top: 30px;
+    box-shadow: 0 0 5px gray;
+    padding: 2px 5px; 
+}
+
+.videoTitle{
+    font-size: medium;
+    width: 200px;
+}
+
+.uploadUserName{
     font-size: small;
+    margin-bottom: 8px;
+}
+
+.divisionLineBoldDisplay{
+    font-weight: bold;
+}
+
+@media (max-width: 820px) {
+    .UploadedVideoSlider{
+        width: 75vw;
+    }  
 }
