add notes to videos done with database integration

--- a/src/components/Dashboard-SideNav/CheckData.module.css
+++ b/src/components/Dashboard-SideNav/CheckData.module.css
@@ -12,6 +12,8 @@
 .videoTitle{
     font-size: medium;
     width: 200px;
+    display: flex;
+    justify-content: space-between;
 }
 
 .uploadUserName{
